# main-project-jeck-inc

./: CMakeLists.txt  Sprint2_Activity_Diagram.puml
app/: CMakeLists.txt  building.json  main.cpp
dependencies/: dependencies.cmake
docs/User_To_UI/: User_UI.puml  User_UI_Simplistic_View_Get_Metrics.puml  User_UI_Techinical_View_Access_Logs.puml  User_UI_Techinical_View_Edit_Map.puml
docs/contributions/: Sprint0_Contribution_Chris_Verbaro.md  Sprint0_Contribution_EricMarkstein.md  Sprint0_Contribution_JackPagano.md  Sprint0_Contribution_KritimRijal.md  Sprint1_Contribution_Chris_Verbaro.md  Sprint1_Contribution_EricMarkstein.md  Sprint1_Contribution_JackPagano.md  Sprint1_Contribution_KritimRijal.md  Sprint2_Contribution_ChrisVerbaro.md  Sprint2_Contribution_EricMarkstein.md  Sprint2_Contribution_JackPagano.md  Sprint2_Contribution_KritimRijal.md  Sprint3_Contribution_Chris_Verbaro.md  Sprint3_Contribution_EricMarkstein.md  Sprint3_Contribution_JackPagano.md  Sprint3_Contribution_KritimRijal.md  Sprint4_Contribution_Chris_Verbaro  Sprint4_Contribution_EricMarkstein.md  Sprint4_Contribution_JackPagano.md  Sprint4_Contribution_KritimRijal.md  Sprint5_Contribution_ChrisVerbaro.md  Sprint5_Contribution_EricMarkstein.md  Sprint5_Contribution_KritimRijal.md
docs/design/: DESIGN.md  USE_CASES.md
docs/design/Activity/: ACTIVITY.md  Robot_Database_Simulation_Activity_Diagram.puml  Robot_Database_Simulation_Activity_Diagram_IF_ELSE.puml  bm.puml
docs/design/Architecture/: ARCHITECTURE.md
docs/design/Classes/: CLASSES.md  classes.puml
docs/design/FE_Use_Cases/: FE_USE_CASE.md  field_engineer_use_case.puml
docs/design/Sequence/: SEQUENCE.md
docs/design/Sequence/Entities/: Entities_Sequence_Diagram.puml
docs/design/Sequence/User_To_UI/: User_UI_Simplistic_View_Assign_Tasks.puml  User_UI_Simplistic_View_Get_Metrics.puml  User_UI_Techinical_View_Access_Logs.puml  User_UI_Techinical_View_Add_Robot.puml  User_UI_Techinical_View_Edit_Map.puml  User_UI_login.puml
docs/design/UI/: USER_INTERFACE.md
docs/design/Use_Cases/: UC_Building_Manager.puml  UC_Field_Engineer.puml  UC_Operator.puml  UC_Senior_Management.puml  USE_CASES.md
docs/notes/: CUSTOMER_INTERVIEW.md  INITIAL_STAFF_PLANNING.md
docs/user_guide/: USER_GUIDE.md
include/: Database.hpp  Robot.hpp  RoundedButton.hpp  Simulation.hpp  subFrame.hpp
include/Frames/: bm.hpp  bs.hpp  fe.hpp  sm.hpp
src/: Database.cpp  Robot.cpp  Simulation.cpp  subFrame.cpp
src/Frames/: bm.cpp  bs.cpp  fe.cpp  sm.cpp
tests/: CMakeLists.txt  TESTS.md  test_building.json  test_db.cpp  test_robot.cpp  test_simulation.cpp
